# OrtoBot

./: .gitignore  README.md  justfile  pyproject.toml
conf/: config.example.toml
src/: bll_watering.py  configReader.py  config_reader.py  data_manager.py  irrigation.py  main.py  weather.py
