[project]
name = "orto"
version = "0.1.0"
description = "Quando devo bagnare l'orto?"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.3.1",
    "python-telegram-bot[job-queue]>=22.7",
    "requests-cache>=1.3.1",
    "retry-requests>=2.0.0",
    "toml>=0.10.2",
    "urllib3>=2.6.3",
]
